--- a/src/templates/results-list.hbs
+++ b/src/templates/results-list.hbs
@@ -1,7 +1,7 @@
 <ul class="list-group list-group-js">
     {{#each this}}
-    <li class="list-group-item">
-        <p>{{name}}</p>
+    <li class="list-group-item list-group-item-action">
+        <p class="list-group-item--value">{{name}}</p>
     </li>
     {{/each}}
 </ul>
