--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,13 @@ body {
 
 .list-group-item {
   min-width: 450px;
+  padding: 0;
 }
+
+.list-group-item--value {
+  margin: 0;
+  padding: 15px;
+  }
 
 .country-name {
   text-align: center;
@@ -72,4 +78,6 @@ list-style-type: disc;
   position: absolute;
   z-index: -1;
 }
+
+
 
