--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,14 +10,32 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
   background-color: #fff;
   color: #212121;
-  display: flex;
+  min-width: 100%;
+  min-height: 100vh;
+  background: url(./images/flag-collage_500-min.jpg);
+  position: relative;
+}
+
+body::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.8;
+  z-index: -1;
+}
+
+.page-section {
   flex-direction: column;
   align-items: center;
+  display: flex;
 }
 
 .page-title {
@@ -40,7 +58,7 @@ body {
 .list-group-item--value {
   margin: 0;
   padding: 15px;
-  }
+}
 
 .country-name {
   text-align: center;
@@ -48,7 +66,6 @@ body {
 }
 
 .country-info {
-  display: flex;
   font-size: 25px;
 }
 
@@ -67,17 +84,11 @@ body {
 }
 
 .languages-list {
-list-style-type: disc;
+  list-style-type: disc;
 }
 
-.background {
-  min-height: 100vh;
-  min-width: 100%;
-  background: url(./images/flag-collage_500-min.jpg);
-  opacity: 0.2;
-  position: absolute;
-  z-index: -1;
+@media screen and (min-width: 1024px) {
+  .country-info {
+    display: flex;
+  }
 }
-
-
-
