--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,21 +15,9 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
   background-color: #fff;
   color: #212121;
-  min-width: 100%;
   min-height: 100vh;
-  background: url(./images/flag-collage_500-min.jpg);
-  position: relative;
-}
-
-body::before {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  opacity: 0.8;
-  z-index: -1;
+  background: linear-gradient(rgba(225, 225, 225, 0.8), rgba(225, 225, 225, 0.8)),
+    url(./images/flag-collage_500-min.jpg);
 }
 
 .page-section {
