--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,51 +16,32 @@ body {
   background-color: #fff;
   color: #212121;
   min-height: 100vh;
-  background: linear-gradient(rgba(225, 225, 225, 0.8), rgba(225, 225, 225, 0.8)),
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.85),
+      rgba(255, 255, 255, 0.85)
+    ),
     url(./images/flag-collage_500-min.jpg);
 }
 
-.page-section {
-  flex-direction: column;
-  align-items: center;
-  display: flex;
+p {
+  margin: 0;
 }
 
 .page-title {
   padding-top: 50px;
 }
 
-.search-form {
-  padding: 30px 0;
-}
-
-.form-control {
-  width: auto;
-}
-
-.list-group-item {
-  min-width: 450px;
-  padding: 0;
+.page-section {
+  text-align: center;
 }
 
 .list-group-item--value {
   margin: 0;
-  padding: 15px;
-}
-
-.country-name {
-  text-align: center;
-  margin: 0 auto 30px auto;
-}
-
-.country-info {
-  font-size: 25px;
 }
 
 .country-info--list {
   list-style: none;
   margin: 0;
-  padding: 30px;
 }
 
 .country-info--category {
@@ -75,8 +56,122 @@ body {
   list-style-type: disc;
 }
 
-@media screen and (min-width: 1024px) {
+.search-form {
+  padding: 30px 0;
+}
+
+.country-info--list {
+  padding: 0;
+  text-align: left;
+}
+
+@media screen and (max-width: 425px) {
+  .page-title {
+    font-size: 25px;
+  }
+
+  .form-control {
+    width: 200px;
+  }
+
+  .results-js {
+    padding: 0 20px;
+  }
+
+  .list-group-item {
+    padding: 10px 12px;
+  }
+
+  .country-name {
+    margin-bottom: 15px;
+  }
+
+  .country-info {
+    font-size: 20px;
+  }
+
+  .country-info--list-item {
+    padding-bottom: 10px;
+  }
+
+  .ui-pnotify {
+    margin-left: 20px;
+    max-width: 360px;
+  }
+}
+
+@media screen and (min-width: 426px) {
+  .country-name {
+    margin: 0 auto 30px auto;
+  }
+
+  .form-control {
+    width: 346px;
+  }
+
+  .country-info {
+    font-size: 25px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 767px) {
+  .country-info--list {
+    min-width: 346px;
+    display: inline-block;
+  }
+
+  .country-info--list-item {
+    padding-bottom: 15px;
+  }
+
+  .country-info--list {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .form-control {
+    margin: 0 auto;
+  }
+
+  .results-js {
+    padding: 0 40px;
+    margin: 0 auto;
+  }
+
+  .country-info--img {
+    width: 100%;
+    max-width: 450px;
+  }
+
+  .list-group-item {
+    margin: 0 auto;
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .page-section {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+  }
+
+  .list-group-item {
+    min-width: 450px;
+  }
+
   .country-info {
     display: flex;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .country-info--img {
+    width: 300px;
+  }
+
+  .country-info--list {
+    padding-right: 30px;
   }
 }
